--- a/src/components/user.css
+++ b/src/components/user.css
@@ -7,7 +7,6 @@ body {background-color: gray;}
     align-items: center;
     max-width: 600px;
     margin: 20px auto;
-    padding: 20px;
     border: 1px solid #ddd;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -16,16 +15,18 @@ body {background-color: gray;}
 .description {
     width: 600px;
     text-align: center;
-    border: 1px solid #ddd;
+   
     
 }
 
 .avatar {
+    
     width: 100px;
     height: 100px;
     border-radius: 50%;
     margin-bottom: 10px;
-    border:2px dotted gray
+    border:2px solid gray;
+    background-color: #888;
 }
 
 .name {
@@ -48,23 +49,28 @@ body {background-color: gray;}
 
 
 .stats {
-    min-width:100% ;
+    width: 600px;
     list-style: none;
     display:flex;
-    justify-content: space-between;
-    padding: 0;
+    justify-content: space-evenly;
+   align-items: center;
     text-align:center;
-    background-color: rgb(105, 164, 193);
+    background-color: #888;
+    gap: 150px;
+ 
+
 }
 
 .stats li {
     display: flex;
     flex-direction: column;
     margin: 0 10px;
+    border-radius: 8px;
 }
 
 .label {
-    color: #555;
+    color: #ddd;
+    font-weight: bold;
 }
 
 .quantity {
