--- a/src/components/user.css
+++ b/src/components/user.css
@@ -1,78 +1,73 @@
-body {background-color: #999;}
+body {
+  background-color: #999;
+}
+
 .profile {
-    background-color: whitesmoke;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    max-width: 600px;
-    margin: 20px auto;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  background-color: whitesmoke;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 600px;
+  margin: 20px auto;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .description {
-    width: 600px;
-    text-align: center;
-   
-    
+  text-align: center;
 }
 
 .avatar {
-    
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    margin-bottom: 10px;
-    border:2px solid gray;
-    background-color: #888;
+  width: 100px;
+  height: 100px;
+  border-radius: 20%;
+  margin-bottom: 10px;
+  border: 2px solid gray;
+  background-color: #888;
 }
 
 .name {
-    font-size: 1.2em;
-    font-weight: bold;
-    margin: 0;
-    color: #444
+  font-size: 1.2em;
+  font-weight: bold;
+  margin: 0;
+  color: #444;
 }
 
 .tag {
-    color: #777;
-    margin: 5px 0;
+  color: #777;
+  margin: 5px 0;
 }
 
 .location {
-    color: #555;
-    margin: 0;
+  color: #555;
+  margin: 0;
 }
 
-
-
 .stats {
-    width: 600px;
-    list-style: none;
-    display:flex;
-    justify-content: space-evenly;
-   align-items: center;
-    text-align:center;
-    background-color: #888;
-    gap: 150px;
- 
-
+  width: 600px;
+  list-style: none;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  text-align: center;
+  background-color: #888;
+  gap: 150px;
 }
 
 .stats li {
-    display: flex;
-    flex-direction: column;
-    margin: 0 10px;
-    border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  margin: 0 10px;
+  border-radius: 8px;
 }
 
 .label {
-    color: #ddd;
-    font-weight: bold;
+  color: #ddd;
+  font-weight: bold;
 }
 
 .quantity {
-    font-weight: bold;
-    color: #030000;
+  font-weight: bold;
+  color: #030000;
 }
